--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#tilburg-1910">1910: Tilburg</a></li>
         <li><a href="#raamsdonksveer-1911">1911: Raamsdonksveer</a></li>
         <li>1912: ???</li>
-        <li>1913: Oostburg <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/2" target="_blank">(not yet available)</a></li>
+        <li><a href="#oostburg-1913">1913: Oostburg</a></li>
         <li>1914: ???</li>
         <li>1915: Doetinchem <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/4" target="_blank">(not yet available)</a></li>
         <li>1916: Breda <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/8" target="_blank">(not yet available)</a></li>
@@ -710,6 +710,255 @@
         </details>
 
         <p>For the plants with locations: <a href="view.html?raamsdonksveer-1911&amp;raamsdonksveer-1911-routes&amp;center=[51.68,4.9]&amp;zoom=12">Map</a> &amp; <a href="data/raamsdonksveer-1911.json">data</a></p>
+      </section>
+
+      <section id="oostburg-1913">
+        <h3>1913: Oostburg</h3>
+
+        <blockquote>Lako, D. (1910). Verslag van de in Juli/Aug. 1913 gemaakte excursies. <i>Nederlandsch kruidkundig archief. Serie 3, 23</i>, 17&ndash;30. <a href="https://www.biodiversitylibrary.org/page/4499966">Full text</a></blockquote>
+
+        <p>Series of excursions around Oostburg between July 26th and July 29th of 1913 attended by J. W. C. Goethart, A. W. Kloos, D. Lako and L. Vuyck. Additional data from Lako from August 13th to 17th are included.</p>
+
+        <ul>
+          <li>July 25th 1913: Oostburg</li>
+          <li>
+            July 26th 1913
+            <ul>
+              <li>Goethart &amp; Kloos: Oostburg - Zuidzande - Cadzand</li>
+              <li>Lako &amp; Vuyck: Oostburg - Nieuwvliet - Cadzand</li>
+            </ul>
+          </li>
+          <li>
+            July 27th 1913
+            <ul>
+              <li>Goethart &amp; Vuyck: Breskens - Groede - Oostburg</li>
+              <li>Kloos &amp; Lako: Cadzand - Retranchement</li>
+            </ul>
+          </li>
+          <li>
+            July 28th 1913
+            <ul>
+              <li>Goethart &amp; Lako: Sluis - Heille - Aardenburg</li>
+              <li>Kloos &amp; Vuyck: Aardenburg - St. Kruis</li>
+            </ul>
+          </li>
+          <li>
+            July 29th 1913
+            <ul>
+              <li>Goethart &amp; Kloos: Oostburg - Waterlandkerkje - IJzendijke</li>
+              <li>Lako &amp; Vuyck: Schoondijke - Oostburg</li>
+            </ul>
+          </li>
+          <li>August 13th 1913: Breskens - Schoondijke - IJzendijke</li>
+          <li>August 14th 1913: IJzendijke - Biervliet</li>
+          <li>August 15th 1913: IJzendijke - Hoofdplaat</li>
+          <li>August 16th 1913: IJzendijke - Waterlandkerkje - St. Kruis - Aardenburg</li>
+          <li>August 17th 1913: Aardenburg - Oostburg</li>
+        </ul>
+
+        <p>Only relatively uncommon plants are listed with detailed locations; these are the other plants:</p>
+
+        <details>
+          <ul>
+            <li><i>Batrachium trichophyllum submersum parviflorum</i>: v.</li>
+            <li><i>Ranunculus acris</i>: z.a.</li>
+            <li><i>Ranunculus repens</i>: z.a.</li>
+            <li><i>Ranunculus Philonotis</i>: v. op zilte gronden</li>
+            <li><i>Ranunculus sceleratus</i>: v.</li>
+            <li><i>Papaver Rhoeas</i>: z.a.</li>
+            <li><i>Papaver genuinum</i>: a.</li>
+            <li><i>Chelidonium majus</i>: v.z. op ruige plaatsen voornamelijk in de buurt van woningen</li>
+            <li><i>Nasturtium officinale</i>: v.a.</li>
+            <li><i>Sisymbrium officinale</i>: a.</li>
+            <li><i>Sinapis arvensis</i>: a. op bouwland</li>
+            <li><i>Thlaspi arvense</i>: a. op bouwl.</li>
+            <li><i>Capsella Bursa pastoris</i>: z.a.</li>
+            <li><i>Senebiera Coronopus</i>: z.a.</li>
+            <li><i>Cakile maritima</i>: langs het strand</li>
+            <li><i>Viola tricolor</i>: v.</li>
+            <li><i>Sagina procumbens</i>: v.</li>
+            <li><i>Lepigonum medium</i>: op de schorren en op zilte gronden binnendijks</li>
+            <li><i>Lepigonum marginatum</i>: als de vorige</li>
+            <li><i>Arenaria serpyllifolia</i>: v.</li>
+            <li><i>Stellaria media</i>: z.a.</li>
+            <li><i>Cerastium triviale</i>: z.a.</li>
+            <li><i>Malva sylvestris</i>: v.</li>
+            <li><i>Malva vulgaris</i>: v.z.</li>
+            <li><i>Althaea officinalis</i>: v.z.</li>
+            <li><i>Hypericum perforatum</i>: v.a.</li>
+            <li><i>Hypericum tetrapterum</i>: v.z.</li>
+            <li><i>Geranium dissectum</i>: a.</li>
+            <li><i>Geranium molle a.</i></li>
+            <li><i>Geranium Robertianum</i>: v.z.</li>
+            <li><i>Ononis spinosa</i>: a.</li>
+            <li><i>Medicago sativa</i>: v. kanten van wegen en bouwl.</li>
+            <li><i>Medicago Lupulina</i>: z.a.</li>
+            <li><i>Trifolium pratense</i>: z.a.</li>
+            <li><i>Trifolium fragiferum</i>: z.a.</li>
+            <li><i>Trifolium repens</i>: z.a.</li>
+            <li><i>Trifolium hybridum</i>: v. zich meer en meer uitbreidend</li>
+            <li><i>Trifolium procumbens</i>: z.a.</li>
+            <li><i>Trifolium minus</i>: z.a.</li>
+            <li><i>Lotus corniculatus</i>: a.</li>
+            <li><i>Lotus vulgaris</i>: (de hoofdvorm) a. aan dijken en wegen</li>
+            <li><i>Lotus tenuifolius</i>: (L. ten.) a. op meer zilte gronden aan wegen en slootkanten</li>
+            <li><i>Vicia Cracca</i>: v.</li>
+            <li><i>Vicia sativa</i>: v. aan kanten van wegen en bouwl.</li>
+            <li><i>Ervum tetraspermum</i>: v.</li>
+            <li><i>Lathyrus pratensis</i>: a.</li>
+            <li><i>Prunus spinosa</i>: v.</li>
+            <li><i>Geum urbanum</i>: v.</li>
+            <li><i>Rubus discolor</i>: a.</li>
+            <li><i>Rubus caesius</i>: a.</li>
+            <li><i>Potentilla Anserina</i>: z.a.</li>
+            <li><i>Potentilla reptans v.</i></li>
+            <li><i>Agrimonia Eupatorium</i>: a.</li>
+            <li><i>Rosa canina vulgaris</i>: v.</li>
+            <li><i>Crataegus monogyna</i>: zeer verspreid aan wegen, langs kanten van bouwland, op dijken</li>
+            <li><i>Crataegus Oxyacantha</i>: nergens waargenomen</li>
+            <li><i>Epilobium hirsutum</i>: v.z.</li>
+            <li><i>Epilobium pariflorum</i>: v.</li>
+            <li><i>Sedum acre</i>: in de duinen</li>
+            <li><i>Sempervivum tectorum</i>: hier en daar op pannendaken</li>
+            <li><i>Apium graveolens</i>: v. aan zilte slooten en wateren</li>
+            <li><i>Aegopodium Podagraria</i>: v.</li>
+            <li><i>Oenanthe Phellandrium</i>: v.</li>
+            <li><i>Aethusa Cynapium</i>: a.</li>
+            <li><i>Pastinaca sativa</i>: z.a.</li>
+            <li><i>Daucus Carota</i>: z.a.</li>
+            <li><i>Torilis Anthriscus</i>: a.</li>
+            <li><i>Anthriscus sylvestris</i>: v.</li>
+            <li><i>Chaerophyllum temulum</i>: v.</li>
+            <li><i>Galium Aparine</i>: z.a.</li>
+            <li><i>Galium palustre</i>: v.a.</li>
+            <li><i>Galium verum</i>: in de duinen</li>
+            <li><i>Dipsacus sylvestris</i>: v.</li>
+            <li><i>Eupatorium cannabinum</i>: v.</li>
+            <li><i>Tussilago Farfara</i>: a.</li>
+            <li><i>Aster Tripolium</i>: a. op schorren en op zilte gronden binnendijks</li>
+            <li><i>Bellis perennis</i>: z.a.</li>
+            <li><i>Pulicaria dysenterica</i>: z.a.</li>
+            <li><i>Artemisia vulgaris</i>: v.</li>
+            <li><i>Artemisia vulgaris maritima</i>: zeedijken en schorren</li>
+            <li><i>Tanacetum vulgare</i>: v.</li>
+            <li><i>Achillea Millefolium</i>: z.a. flor. alb., ros. et rub.</li>
+            <li><i>Matricaria Chamomilla</i>: z.a.</li>
+            <li><i>Chrysanthemum Leucanthemum</i>: a.</li>
+            <li><i>Senecio vulgaris</i>: z.a.</li>
+            <li><i>Senecio erucifolius</i>: z.a.</li>
+            <li><i>Senecio Jacobaea</i>: z.a.</li>
+            <li><i>Cirsium lanceolatum</i>: z.a.</li>
+            <li><i>Cirsium arvense</i>: z.a.</li>
+            <li><i>Lappa minor</i>: v.a.</li>
+            <li><i>Centaurea Jacea</i>: z.a.</li>
+            <li><i>Lapsana communis</i>: v.</li>
+            <li><i>Thrincia hirta</i>: v.</li>
+            <li><i>Leontodon autumnalis</i>: z.a.</li>
+            <li><i>Helminthia echioïdes</i>: v.</li>
+            <li><i>Tragopogon minor</i>: v.</li>
+            <li><i>Hypochaeris radicata</i>: a.</li>
+            <li><i>Taraxacum officinale</i>: z.a.</li>
+            <li><i>Sonchus oleraceus</i>: z.a.</li>
+            <li><i>Sonchus asper</i>: z.a.</li>
+            <li><i>Soncus arvensis</i>: z.a.</li>
+            <li><i>Crepis virens</i>: z.a.</li>
+            <li><i>Convolvulus Sepium</i>: a.</li>
+            <li><i>Convolvulus Soldanella</i>: in de duinen</li>
+            <li><i>Convolvulus arvensis</i>: z.a. (voornamelijk de vorm flor. ros. albo-striatis, minder alg. de vorm flor. alb., zeldz. de vorm flor. ros.)</li>
+            <li><i>Cynoglossum officinale</i>: v. duinen en dijken</li>
+            <li><i>Symphytum officinale</i>: a. zeer afwisselend in de kleur der bloemen</li>
+            <li><i>Myosotis hispida</i>: z.a.</li>
+            <li><i>Solarium nigrum</i>: v.z.</li>
+            <li><i>Solarium Dulcamara</i>: v.z.</li>
+            <li><i>Veronica Anagallis</i>: v.</li>
+            <li><i>Veronica agrestis</i>: v.z.</li>
+            <li><i>Veronica polita</i>: v.</li>
+            <li><i>Veronica Buxbaumii</i>: z.a.</li>
+            <li><i>Orobanche minor</i>: v.</li>
+            <li><i>Euphrasia Odontites</i>: a.</li>
+            <li><i>Mentha aquatica</i>: a.</li>
+            <li><i>Mentha arvensis</i>: v.z.</li>
+            <li><i>Glechoma hederacea</i>: a.</li>
+            <li><i>Lamium purpureum</i>: a.</li>
+            <li><i>Lamium album</i>: v.</li>
+            <li><i>Stachys palustris</i>: v.</li>
+            <li><i>Ballota foetida</i>: v.</li>
+            <li><i>Prunella vulgaris</i>: z.a.</li>
+            <li><i>Prunella cor. pallida</i>: v.</li>
+            <li><i>Lysimachia Nummularia</i>: v.</li>
+            <li><i>Anagallis arvensis</i>: a.</li>
+            <li><i>Glaux maritima</i>: op zilte gronden binnen- en buitendijks</li>
+            <li><i>Plantago major</i>: z.a.</li>
+            <li><i>Plantago lanceolata</i>: z.a.</li>
+            <li><i>Chenopodium album</i>: z.a.</li>
+            <li><i>Halimus portulacoïdes</i>: zeedijken en schorren</li>
+            <li><i>Atriplex patula</i>: v.a.</li>
+            <li><i>Atriplex latifolia</i>: v.</li>
+            <li><i>Rumex crispus</i>: z.a.</li>
+            <li><i>Rumex obtusifolius</i>: v.</li>
+            <li><i>Rumex conglomeratus</i>: z.a.</li>
+            <li><i>Rumex Acetosa</i>: v.</li>
+            <li><i>Polygonum pallidum</i>: v.</li>
+            <li><i>Polygonum Persicaria</i>: a.</li>
+            <li><i>Polygonum aviculare</i>: z.a. in verschillende vormen (see p. 27)</li>
+            <li><i>Polygonum Convolvulus</i>: a.</li>
+            <li><i>Hippophaë rhamnoïdes</i>: in de duinen a.</li>
+            <li><i>Euphorbia Helioscopia</i>: a.</li>
+            <li><i>Euphorbia Peplus</i>: a.</li>
+            <li><i>Euphorbia exigua a.</i></li>
+            <li><i>Urtica dioica</i>: z.a.</li>
+            <li><i>Urtica urens</i>: a.</li>
+            <li><i>Humulus Lupulus</i>: v.</li>
+            <li><i>Salix cinerea</i>: v., geen cultuur</li>
+            <li><i>Alisma Plantage</i>: v.</li>
+            <li><i>Potamogeton pectinatus</i>: v.</li>
+            <li><i>Lemna trisulca</i>: a.</li>
+            <li><i>Lemna gibba</i>: a.</li>
+            <li><i>Lemna minor</i>: a.</li>
+            <li><i>Juncus glaucus</i>: z.a.</li>
+            <li><i>Juncus lamprocarpos</i>: v.</li>
+            <li><i>Juncus Gerardi</i>: v.</li>
+            <li><i>Juncus bufonius</i>: a.</li>
+            <li><i>Scirpus Tabernaemontani</i>: v.</li>
+            <li><i>Scirpus maritimus</i>: z.a.</li>
+            <li><i>Carex vulpina</i>: a.</li>
+            <li><i>Phalaris arundinacea</i>: v.</li>
+            <li><i>Alopecurus agrestis</i>: z.a.</li>
+            <li><i>Alopecurus geniculatus</i>: v. op laag gelegen grasgronden</li>
+            <li><i>Phleum pratense</i>: z.a.</li>
+            <li><i>Agrostis stolonifera</i>: z.a.</li>
+            <li><i>Apera Spica venti</i>: v.</li>
+            <li><i>Psamma arenaria</i>: in de duinen a.</li>
+            <li><i>Phragmites communis</i>: z.a.</li>
+            <li><i>Holcus Lanatus</i>: z.a.</li>
+            <li><i>Arrhenatherum elatius</i>: a.</li>
+            <li><i>Avena flavescens</i>: a.</li>
+            <li><i>Poa annua</i>: z.a.</li>
+            <li><i>Poa trivialis</i>: v.</li>
+            <li><i>Poa pratensis</i>: v.</li>
+            <li><i>Glyceria fluitans</i>: z.a.</li>
+            <li><i>Dactylis glomerata</i>: z.a.</li>
+            <li><i>Cynosurus cristatus</i>: z.a.</li>
+            <li><i>Festuca rubra</i>: v.z.</li>
+            <li><i>Festuca arundinacea</i>: v.a.</li>
+            <li><i>Bromus commutatus</i>: v. aan kanten van wegen en bouwland</li>
+            <li><i>Bromus mollis</i>: z.a.?</li>
+            <li><i>Bromus sterilis</i>: v.</li>
+            <li><i>Triticum repens</i>: z.a.</li>
+            <li><i>Triticum vulgare</i>: a. (muticum, breve aristatum. longe aristatum)</li>
+            <li><i>Triticum glaucum</i>: a. naar den zeekant</li>
+            <li><i>Triticum glaucum muticum</i>: a.</li>
+            <li><i>Hordeum murinum</i>: v.a.</li>
+            <li><i>Hordeum secalinum</i>: z.a.</li>
+            <li><i>Lolium perenne</i>: z.a.</li>
+            <li><i>Lolium italicum</i>: v. op bouwl., vooral op klavervelden</li>
+            <li><i>Lolium linicola</i>: a. op vlasakkers</li>
+            <li><i>Equisetum arvense</i>: z.a. in verschillende vormen (see p. 30)</li>
+            <li><i>Equisetum palustre</i>: v.</li>
+          </ul>
+        </details>
+
+        <p>For the plants with locations: <a href="view.html?oostburg-1913&amp;oostburg-1913-routes&amp;center=[51.32,3.55]&amp;zoom=12">Map</a> &amp; <a href="data/oostburg-1913.json">data</a></p>
       </section>
 
       <section id="s_hertogenbosch-1918">
