--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li>1916: Breda <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/8" target="_blank">(not yet available)</a></li>
         <li>1917: Meppel <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/5" target="_blank">(not yet available)</a></li>
         <li><a href="#s_hertogenbosch-1918">1918: 's Hertogenbosch</a></li>
-        <li>1919: Nijmegen <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/7" target="_blank">(not yet available)</a></li>
+        <li><a href="#nijmegen-1919">1919: Nijmegen</a></li>
         <li>1920: Ter Apel <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/9" target="_blank">(not yet available)</a></li>
         <li>1921: Arcen <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/10" target="_blank">(not yet available)</a></li>
         <li>1922: Goes <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/11" target="_blank">(not yet available)</a></li>
@@ -966,7 +966,7 @@
 
         <blockquote>Vuyck, L. (1919). Verslag der Excursie, gehouden te ’s-Hertogenbosch op 26 Juli 1918 en volgende dagen. <i>Nederlandsch kruidkundig archief. Serie 3, 28</i>, 19&ndash;30. <a href="https://www.biodiversitylibrary.org/page/34363815">Full text</a></blockquote>
 
-        <p>Series of excursions around Raamsdonksveer between the 27th to 29th of August, 1918, attended by Brand, van Goor, Henrard, Jansen, Schuyt, en Vuyck.</p>
+        <p>Series of excursions around Raamsdonksveer between the 27th to 29th of August, 1918, attended by Brand, van Goor, Henrard, Jansen, Schuyt, and Vuyck.</p>
 
         <ul>
           <li>July 27th 1918: Station Waalwijk - Sprang - Kaatsheuvel - Loon op Zand - de Ruiterbaan - Loon op Zand</li>
@@ -1136,6 +1136,215 @@
         </details>
 
         <p>For the plants with locations: <a href="view.html?s_hertogenbosch-1918&amp;s_hertogenbosch-1918-routes&amp;center=[51.65,5.2]&amp;zoom=12">Map</a> &amp; <a href="data/s_hertogenbosch-1918.json">data</a></p>
+      </section>
+    </section>
+
+      <section id="nijmegen-1919">
+        <h3>1919: Nijmegen</h3>
+
+        <blockquote>Vuyck, L. (1920). Bijlage I. Verslag van de Zomerexcursie 1919 <i>Nederlandsch kruidkundig archief. Serie 3, 29</i>, 21&ndash;33. <a href="https://www.biodiversitylibrary.org/page/34364013">Full text</a></blockquote>
+
+        <p>Series of excursions around Nijmegen between the 24th and 27th of July, 1919, attended by A. W. Kloos Jr., Dr. J. Brand, Dr. A. C. J. van Goor, J. Heimans, J. Th. Henrard, P. Jansen, W. H. Wachter, W. J. C. Kooper, and Vuyck.</p>
+
+        <ul>
+          <li>July 24th 1918: Haven (Nijmegen)</li>
+          <li>July 25th 1918: St. Jansberg - Milsbeek - Plasmolen</li>
+          <li>July 26th 1918: Ooi - Ubbergense Heuvels</li>
+          <li>July 27th 1918: Malden - Kapel-ruïne - Wijchense meer</li>
+        </ul>
+
+        <details>
+          <li><i>Achillea Millefolium</i>: z.a.</li>
+          <li><i>Achillea Ptarmica</i>: a.</li>
+          <li><i>Aegopodium</i>: a.</li>
+          <li><i>Agrimonia</i>: v.a.</li>
+          <li><i>Agrostis alba</i>: a.</li>
+          <li><i>Agrostis vulgaris</i>: a.</li>
+          <li><i>Aira caespitosa</i>: v.a.</li>
+          <li><i>Alisma Plantago</i>: z.a.</li>
+          <li><i>Allium vineale</i>: v.a.</li>
+          <li><i>Alnus glutinosa</i>: v.a.</li>
+          <li><i>Aegopodium</i>: v.a.</li>
+          <li><i>Anthemis arvensis</i>: z.a.</li>
+          <li><i>Anthoxanthum odoratum</i>: z.a.</li>
+          <li><i>Anthriscus silvestris</i>: v.a.</li>
+          <li><i>Antirrhinum Orontium</i>: a.</li>
+          <li><i>Apera Spica venti</i>: a.</li>
+          <li><i>Arnoseris</i>: a.</li>
+          <li><i>Arrhenatherum</i>: a.</li>
+          <li><i>Artemisa vulgaris</i>: a.</li>
+          <li><i>Bellis</i>: z.a.</li>
+          <li><i>Bidens tripartitus</i>: a.</li>
+          <li><i>Bromus mollis</i>: z.a.</li>
+          <li><i>Butomus</i>: a.</li>
+          <li><i>Calluna</i>: a.</li>
+          <li><i>Campanula rotundifolia</i>: a.</li>
+          <li><i>Capsella</i>: z.a.</li>
+          <li><i>Cardamine pratensis</i>: a.</li>
+          <li><i>Carduus crispus</i>: a.</li>
+          <li><i>Carex arenaria</i>: a.</li>
+          <li><i>Centaurea Cyanus</i>: a.</li>
+          <li><i>Centaurea Jacea</i>: z.a.</li>
+          <li><i>Cerastium arvense</i>: v.a.</li>
+          <li><i>Chaerophyllum temulum</i>: a.</li>
+          <li><i>Chelidonium</i>: a.</li>
+          <li><i>Chenopodium album</i>: z.a.</li>
+          <li><i>Chenopodium Leucanthemum</i>: a.</li>
+          <li><i>Cirsium arvense</i>: z.a.</li>
+          <li><i>Cirsium palustre</i>: a.</li>
+          <li><i>Convolvulus arvensis</i>: z.a.</li>
+          <li><i>Convolvulus sepium</i>: z.a.</li>
+          <li><i>Corynephorus canescens</i>: v.a.</li>
+          <li><i>Crataegus monogyna</i>: a.</li>
+          <li><i>Crepis virens</i>: a.</li>
+          <li><i>Cynosurus</i>: v.a.</li>
+          <li><i>Dactylis</i>: z.a.</li>
+          <li><i>Daucus</i>: z.a.</li>
+          <li><i>Equisetum arvense</i>: a.</li>
+          <li><i>Equisetum limosum</i>: a.</li>
+          <li><i>Erica Tetralix</i>: a.</li>
+          <li><i>Erodium pimpinellifolium</i>: z.a.</li>
+          <li><i>Erysimum cheiranthoides</i>: z.a.</li>
+          <li><i>Euphorbia Helioscopia</i>: v.a.</li>
+          <li><i>Galeopsis Tetrahit</i>: a.</li>
+          <li><i>Galium Aparine</i>: a.</li>
+          <li><i>Galium Mollugo</i>: z.a.</li>
+          <li><i>Galium palustre</i>: z.a.</li>
+          <li><i>Galium verum</i>: z.a.</li>
+          <li><i>Geranium molle</i>: v.a.</li>
+          <li><i>Geranium pusillum</i>: v.a.</li>
+          <li><i>Glechoma</i>: z.a.</li>
+          <li><i>Glyceria fluitans</i>: z.a.</li>
+          <li><i>Glyceria spectabilis</i>: z.a.</li>
+          <li><i>Gnaphalium uliginosum</i>: a.</li>
+          <li><i>Heleocharis palustris</i>: a.</li>
+          <li><i>Heracleum</i>: a.</li>
+          <li><i>Hieracium Pilosella</i>: a.</li>
+          <li><i>Holcus lanatus</i>: v.a.</li>
+          <li><i>Holcus mollis</i>: v.a.</li>
+          <li><i>Hordeum murinum</i>: a.</li>
+          <li><i>Hydrocharis</i>: a.</li>
+          <li><i>Hydrocotyle</i>: v.a.</li>
+          <li><i>Hypericum perforatum</i>: v.a.</li>
+          <li><i>Hypochoeris radicata</i>: a.</li>
+          <li><i>Iris</i>: a.</li>
+          <li><i>Jasione</i>: a.</li>
+          <li><i>Juncus bufonius</i>: z.a.</li>
+          <li><i>Juncus effusus</i>: a.</li>
+          <li><i>Juncus pygmaeus umbelloides</i>: Heumen</li>
+          <li><i>Juncus silvaticus</i>: a.</li>
+          <li><i>Lamium album</i>: z.a.</li>
+          <li><i>Lappa major</i>: v.a.</li>
+          <li><i>Lathyrus pratensis</i>: v.a.</li>
+          <li><i>Lemna minor</i>: v.a.</li>
+          <li><i>Leontodon autumnalis</i>: z.a.</li>
+          <li><i>Leontodon hispida</i>: v.a.</li>
+          <li><i>Linaria vulgaris</i>: z.a.</li>
+          <li><i>Lolium multiflorum</i>: a.</li>
+          <li><i>Lolium perenne</i>: z.a.</li>
+          <li><i>Lotus corniculatus</i>: a.</li>
+          <li><i>Lotus uliginosus</i>: a.</li>
+          <li><i>Lychnis diurna</i>: v.a. ook met witte bloemen</li>
+          <li><i>Lychnis Flos cuculi</i>: z.a.</li>
+          <li><i>Lysimachia Nummulana</i>: a.</li>
+          <li><i>Lysimachia vulgaris</i>: z.a.</li>
+          <li><i>Lythrum</i>: z.a.</li>
+          <li><i>Medicago lupulina</i>: a.</li>
+          <li><i>Mentha aquatica</i>: a.</li>
+          <li><i>Mentha arvensis</i>: z.a.</li>
+          <li><i>Mercurialis annua</i>: a.</li>
+          <li><i>Myosotis intermedia</i>: v.a.</li>
+          <li><i>Myosotis palustris</i>: a.</li>
+          <li><i>Nardus</i>: v.a.</li>
+          <li><i>Nasturtium amphibium</i>: v.a.</li>
+          <li><i>Nasturtium silvestre</i>: a.</li>
+          <li><i>Nuphar</i>: a.</li>
+          <li><i>Nymphaea</i>: a.</li>
+          <li><i>Oenanthe fistulosa</i>: v.a.</li>
+          <li><i>Oenanthe Phellandrii</i>: z.a.</li>
+          <li><i>Ononis spinosa</i>: v.a.</li>
+          <li><i>Papaver dubium</i>: z.a.</li>
+          <li><i>Papaver Rhoeas</i>: a.</li>
+          <li><i>Pastinaca</i>: v.a.</li>
+          <li><i>Phalaris arundinacea</i>: a.</li>
+          <li><i>Phleum pratense</i>: z.a.</li>
+          <li><i>Phragmites</i>: z.a.</li>
+          <li><i>Picris</i>: z.a.</li>
+          <li><i>Plantago lanceolata</i>: z.a.</li>
+          <li><i>Plantago major</i>: z.a.</li>
+          <li><i>Plantago media</i>: a.</li>
+          <li><i>Poa annua</i>: z.a.</li>
+          <li><i>Poa pratensis</i>: a.</li>
+          <li><i>Polygonum amphibium</i>: a.</li>
+          <li><i>Polygonum aviculare</i>: z.a.</li>
+          <li><i>Polygonum Convolvulus</i>: a.</li>
+          <li><i>Polygonum cuspidatum</i>: Nijmegen</li>
+          <li><i>Polygonum lapathifolium</i>: z.a.</li>
+          <li><i>Polygonum nodosum</i>: a.</li>
+          <li><i>Polygonum persicaria</i>: z.a.</li>
+          <li><i>Potamogeton lucens</i>: a.</li>
+          <li><i>Potentilla anserina</i>: z.a.</li>
+          <li><i>Potentilla argentea</i>: v.a.</li>
+          <li><i>Potentilla reptans</i>: z.a.</li>
+          <li><i>Potamogeton Tormentilla</i>: a.</li>
+          <li><i>Prunella</i>: z.a.</li>
+          <li><i>Prunus spinosa</i>: a.</li>
+          <li><i>Ranunculus acris</i>: z.a., algemeen de vorm Frieseanus.</li>
+          <li><i>Ranunculus Flammula</i>: a.</li>
+          <li><i>Ranunculus Lingua</i>: a.</li>
+          <li><i>Ranunculus repens</i>: z.a.</li>
+          <li><i>Raphanus raphanistrum</i>: v.a.</li>
+          <li><i>Rhamnus Frangula</i>: a.</li>
+          <li><i>Rosa canina</i>: z.a.</li>
+          <li><i>Rubus caesius</i>: v.a.</li>
+          <li><i>Rumex Acetosa</i>: z.a, ook de var. auriculatus</li>
+          <li><i>Rumex Acetosella</i>: a.</li>
+          <li><i>Rumex conglomeratus</i>: a.</li>
+          <li><i>Rumex crispus</i>: z.a.</li>
+          <li><i>Rumex obtusifolius</i>: a.</li>
+          <li><i>Sagittana</i>: v.a.</li>
+          <li><i>Salix cinerea</i>: v.a.</li>
+          <li><i>Salix repens</i>: a.</li>
+          <li><i>Sarothamnus</i>: a.</li>
+          <li><i>Scirpus lacustris</i>: a.</li>
+          <li><i>Scleranthus annuus</i>: z.a.</li>
+          <li><i>Scutellaria galericulata</i>: a.</li>
+          <li><i>Senecio Jacobaea</i>: a.</li>
+          <li><i>Senecio palustris</i>: a.</li>
+          <li><i>Senecio silvatica</i>: a.</li>
+          <li><i>Senecio vulgaris</i>: z.a.</li>
+          <li><i>Sisymbrium officinale</i>: z.a.</li>
+          <li><i>Sium</i>: z.a.</li>
+          <li><i>Solanum nigrum</i>: a.</li>
+          <li><i>Sparganium ramosum</i>: v.a.</li>
+          <li><i>Spergularia rubra</i>: v.a.</li>
+          <li><i>Spiraea Ulmaria</i>: a.</li>
+          <li><i>Stachys arvensis</i>: v.a.</li>
+          <li><i>Stachys palustris</i>: a.</li>
+          <li><i>Stellaria graminea</i>: a.</li>
+          <li><i>Stellaria media</i>: z.a.</li>
+          <li><i>Symphytum</i>: v.a.</li>
+          <li><i>Tanacetum</i>: z.a.</li>
+          <li><i>Taraxacum</i>: z.a.</li>
+          <li><i>Teesdalia</i>: a.</li>
+          <li><i>Thymus</i>: a.</li>
+          <li><i>Tragopogon pratensis</i>: a.</li>
+          <li><i>Trifolium fragiferum</i></li>
+          <li><i>Trifolium minus</i>: z.a.</li>
+          <li><i>Trifolium pratense</i>: z.a.</li>
+          <li><i>Trifolium repens</i>: z.a.</li>
+          <li><i>Triodia</i>: a.</li>
+          <li><i>Triticum repens</i>: z.a.</li>
+          <li><i>Urtica dioica</i>: z.a.</li>
+          <li><i>Urtica urens</i>: a.</li>
+          <li><i>Valeriana officinalis</i>: a.</li>
+          <li><i>Vicia angustifolia</i>: a.</li>
+          <li><i>Vicia Cracca</i>: z.a.</li>
+          <li><i>Vicia sepium</i>: v.a.</li>
+          <li><i>Viola tricolor</i>: z.a.</li>
+        </details>
+
+        <p>For the plants with locations: <a href="view.html?nijmegen-1919&amp;nijmegen-1919-routes&amp;center=[51.8,5.9]&amp;zoom=12">Map</a> &amp; <a href="data/nijmegen-1919.json">data</a></p>
       </section>
     </section>
 
