Fix typo in 1918 info

--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
 
         <blockquote>Vuyck, L. (1919). Verslag der Excursie, gehouden te ’s-Hertogenbosch op 26 Juli 1918 en volgende dagen. <i>Nederlandsch kruidkundig archief. Serie 3, 28</i>, 19&ndash;30. <a href="https://www.biodiversitylibrary.org/page/34363815">Full text</a></blockquote>
 
-        <p>Series of excursions around Raamsdonksveer between the 27th to 29th of August, 1918, attended by Brand, van Goor, Henrard, Jansen, Schuyt, and Vuyck.</p>
+        <p>Series of excursions around 's Hertogenbosch between the 27th to 29th of August, 1918, attended by Brand, van Goor, Henrard, Jansen, Schuyt, and Vuyck.</p>
 
         <ul>
           <li>July 27th 1918: Station Waalwijk - Sprang - Kaatsheuvel - Loon op Zand - de Ruiterbaan - Loon op Zand</li>
@@ -1137,7 +1137,6 @@
 
         <p>For the plants with locations: <a href="view.html?s_hertogenbosch-1918&amp;s_hertogenbosch-1918-routes&amp;center=[51.65,5.2]&amp;zoom=12">Map</a> &amp; <a href="data/s_hertogenbosch-1918.json">data</a></p>
       </section>
-    </section>
 
       <section id="nijmegen-1919">
         <h3>1919: Nijmegen</h3>
